--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">serviproteccion</string>
+    <string name="app_name">Servi</string>
     <string name="fb_app_id">2831106907160474</string>
     <string name="fb_login_protocol_scheme">fb2831106907160474</string>
 </resources>
